Reorder alphabetically and Addinall refs

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -1,30 +1,107 @@
-@article{Lawless2010,
-abstract = {High-throughput screens comparing growth rates of arrays
-                  of distinct micro-organism cultures on solid agar
-                  are useful, rapid methods of quantifying genetic
-                  interactions. Growth rate is an informative
-                  phenotype which can be estimated by measuring cell
-                  densities at one or more times after
-                  inoculation. Precise estimates can be made by
-                  inoculating cultures onto agar and capturing cell
-                  density frequently by plate-scanning or photography,
-                  especially throughout the exponential growth phase,
-                  and summarising growth with a simple dynamic model
-                  (e.g. the logistic growth model). In order to
-                  parametrize such a model, a robust image analysis
-                  tool capable of capturing a wide range of cell
-                  densities from plate photographs is required.},
-author = {Lawless, Conor and Wilkinson, Darren J and Young, Alexander and Addinall, Stephen G and Lydall, David A},
-doi = {10.1186/1471-2105-11-287},
-issn = {1471-2105},
-journal = {BMC Bioinformatics},
-number = 1,
-pages = {1--12},
-title = {{Colonyzer: automated quantification of micro-organism growth characteristics on solid agar}},
-url = {http://dx.doi.org/10.1186/1471-2105-11-287},
-volume = 11,
-year = 2010
+@article {Addinall2008,
+	author = {Addinall, S. G. and Downey, M. and Yu, M. and Zubko,
+                  M. K. and Dewar, J. and Leake, A. and Hallinan,
+                  J. and Shaw, O. and James, K. and Wilkinson,
+                  D. J. and Wipat, A. and Durocher, D. and Lydall, D.},
+	title = {A Genomewide Suppressor and Enhancer Analysis of
+                  cdc13-1 Reveals Varied Cellular Processes
+                  Influencing Telomere Capping in Saccharomyces
+                  cerevisiae},
+	volume = 180,
+	number = 4,
+	pages = {2251--2266},
+	year = 2008,
+	doi = {10.1534/genetics.108.092577},
+	publisher = {Genetics},
+	abstract = {In Saccharomyces cerevisiae, Cdc13 binds telomeric
+                  DNA to recruit telomerase and to
+                  {\textquotedblleft}cap{\textquotedblright}
+                  chromosome ends. In temperature-sensitive cdc13-1
+                  mutants telomeric DNA is degraded and cell-cycle
+                  progression is inhibited. To identify novel proteins
+                  and pathways that cap telomeres, or that respond to
+                  uncapped telomeres, we combined cdc13-1 with the
+                  yeast gene deletion collection and used
+                  high-throughput spot-test assays to measure
+                  growth. We identified 369 gene deletions, in eight
+                  different phenotypic classes, that reproducibly
+                  demonstrated subtle genetic interactions with the
+                  cdc13-1 mutation. As expected, we identified DNA
+                  damage checkpoint, nonsense-mediated decay and
+                  telomerase components in our screen. However, we
+                  also identified genes affecting casein kinase II
+                  activity, cell polarity, mRNA degradation,
+                  mitochondrial function, phosphate transport, iron
+                  transport, protein degradation, and other
+                  functions. We also identified a number of genes of
+                  previously unknown function that we term RTC, for
+                  restriction of telomere capping, or MTC, for
+                  maintenance of telomere capping. It seems likely
+                  that many of the newly identified pathways/processes
+                  that affect growth of budding yeast cdc13-1 mutants
+                  will play evolutionarily conserved roles at
+                  telomeres. The high-throughput spot-testing approach
+                  that we describe is generally applicable and could
+                  aid in understanding other aspects of eukaryotic
+                  cell biology.},
+	issn = {0016-6731},
+	URL = {http://www.genetics.org/content/180/4/2251},
+	eprint = {http://www.genetics.org/content/180/4/2251.full.pdf},
+	journal = {Genetics}
 }
+
+
+@article{Addinall2011,
+    author = {Addinall, Stephen Gregory AND Holstein, Eva-Maria AND
+                  Lawless, Conor AND Yu, Min AND Chapman, Kaye AND
+                  Banks, A. Peter AND Ngo, Hien-Ping AND Maringele,
+                  Laura AND Taschuk, Morgan AND Young, Alexander AND
+                  Ciesiolka, Adam AND Lister, Allyson Lurena AND
+                  Wipat, Anil AND Wilkinson, Darren James AND Lydall,
+                  David},
+    journal = {PLoS Genet},
+    publisher = {Public Library of Science},
+    title = {Quantitative Fitness Analysis Shows That NMD Proteins and
+                  Many Other Protein Complexes Suppress or Enhance
+                  Distinct Telomere Cap Defects},
+    year = 2011,
+    month = 04,
+    volume = 7,
+    url = {http://dx.doi.org/10.1371%2Fjournal.pgen.1001362},
+    pages = {1-16},
+    abstract = {<title>Author Summary</title> <p>Telomeres,
+                  specialized structures at the end of linear
+                  chromosomes, ensure that chromosome ends are not
+                  mistakenly treated as DNA double-strand
+                  breaks. Defects in the telomere cap contribute to
+                  ageing and cancer. In yeast, defects in telomere
+                  capping proteins can cause telomeres to behave like
+                  double-strand breaks. To better understand the
+                  telomere and responses to capping failure, we have
+                  combined a systematic yeast gene deletion library
+                  with mutations affecting important yeast telomere
+                  capping proteins, Cdc13 or Yku70. Quantitative
+                  Fitness Analysis (QFA) was used to accurately
+                  measure the fitness of thousands of different yeast
+                  strains containing telomere capping defects and
+                  additional deletion mutations. Interestingly, we
+                  find that many gene deletions suppress one type of
+                  telomere capping defect while enhancing
+                  another. Through QFA, we can begin to define the
+                  roles of different gene products in contributing to
+                  different aspects of the telomere cap. Strikingly,
+                  mutations in nonsense-mediated mRNA decay pathways,
+                  which degrade many RNA molecules, suppress the
+                  <italic>cdc13-1</italic> defect while enhancing the
+                  <italic>yku70</italic>? defect. QFA is widely
+                  applicable and will be useful for understanding
+                  other aspects of yeast cell biology.</p> },
+    number = 4,
+    doi = {10.1371/journal.pgen.1001362}
+}
+
+
+@MISC{Banks2012, url = {http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, title = {A Quantitative Fitness Analysis Workflow}, journal = {JoVE (Journal of Visualized Experiments)}, YEAR = 2012, howpublished = {\url{http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}}, author = {Banks, A.P. and Lawless, C. and Lydall, D.A.}, archived = {http://greycite.knowledgeblog.org/?uri=http%3A%2F%2Fwww.jove.com%2Fvideo%2F4018%2Fa-quantitative-fitness-analysis-workflow, http://wayback.archive.org/web/http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, }
 
 
 @article{Baryshnikova2010,
@@ -107,4 +184,31 @@ abstract = {Quantitative fitness analysis (QFA) is a high throughput
                   published data set.},
 }
 
-@MISC{Banks2012, url = {http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, title = {A Quantitative Fitness Analysis Workflow}, journal = {JoVE (Journal of Visualized Experiments)}, YEAR = 2012, howpublished = {\url{http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}}, author = {Banks, A.P. and Lawless, C. and Lydall, D.A.}, archived = {http://greycite.knowledgeblog.org/?uri=http%3A%2F%2Fwww.jove.com%2Fvideo%2F4018%2Fa-quantitative-fitness-analysis-workflow, http://wayback.archive.org/web/http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, }
+
+@article{Lawless2010,
+abstract = {High-throughput screens comparing growth rates of arrays
+                  of distinct micro-organism cultures on solid agar
+                  are useful, rapid methods of quantifying genetic
+                  interactions. Growth rate is an informative
+                  phenotype which can be estimated by measuring cell
+                  densities at one or more times after
+                  inoculation. Precise estimates can be made by
+                  inoculating cultures onto agar and capturing cell
+                  density frequently by plate-scanning or photography,
+                  especially throughout the exponential growth phase,
+                  and summarising growth with a simple dynamic model
+                  (e.g. the logistic growth model). In order to
+                  parametrize such a model, a robust image analysis
+                  tool capable of capturing a wide range of cell
+                  densities from plate photographs is required.},
+author = {Lawless, Conor and Wilkinson, Darren J and Young, Alexander and Addinall, Stephen G and Lydall, David A},
+doi = {10.1186/1471-2105-11-287},
+issn = {1471-2105},
+journal = {BMC Bioinformatics},
+number = 1,
+pages = {1--12},
+title = {{Colonyzer: automated quantification of micro-organism growth characteristics on solid agar}},
+url = {http://dx.doi.org/10.1186/1471-2105-11-287},
+volume = 11,
+year = 2010
+}
