First draft of aims.

--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -19,13 +19,14 @@ curve observations, which may including variation from competition and
 signalling effects, using non-mechanistic statistical techniques aimed
 at improving the correlation between repeats of identical mutant
 strains at different locations. (Could mention advantages
-of the Bayesian approach of Heydari et al.)
+of the Bayesian approach of \citet{Heydari2016} from a statistical and
+computational perspective.)
 
-This project aims to account for competition and signalling
+This project aims instead to account for competition and signalling
 mechanistically in order to learn more about the sources of systematic
-variation in these procedures and to develop experimental designs and
-analyses for dealing with them. Specifically, the project aims to
-investigate the following hypotheses:
+variation in QFA and to develop experimental designs and analyses for
+dealing with them. Specifically, the project aims to determine whether
+the following hypotheses are correct:
 \begin{itemize}
 \item Growth of colonies in QFA experiments is affected by competition
   and/or signalling.
@@ -37,17 +38,15 @@ investigate the following hypotheses:
 \end{itemize}
 
 
-\citet{Addinall2011} aim to discover genes interacting with a
-temperature-sensitive mutant of \textit{cdc13} in
-\textit{Saccharomyces cerevisiae} because of \textit{cdc13}'s function in telomere
-capping and the link between telomere shortening, ageing, and cancer.
-
-
-If the power to predict genetic interactions is improved in the
-reanalysis of data from \citet{Addinall2011}, this may provide clues
-t will be
-relevant for investigations of other types of genetic interaction and
-investigations using other types of microbial organism.
+Motivated by the link between telomere shortening, ageing, and cancer
+(refs?), \citet{Addinall2011} study the genetic interactions of
+\textit{cdc13} which functions in telomere capping in the model
+organism \textit{Saccharomyces cerevisiae}. If the power to predict
+genetic interactions is improved in the reanalysis of data from
+\citet{Addinall2011}, this may highlight new genes involved in these
+processes and will also be relevant for investigations of other types
+of genetic interaction and investigations using other types of
+microbial organism.
 
 
 %%% Local Variables:
