Add square array model image.

--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -1,7 +1,12 @@
-
+\graphicspath{{images_low_res/}}
 \section{Approach}
 \label{sec:approach}
 
+\begin{Figure}
+  \centering
+  \includegraphics[width=\linewidth]{square_array}
+  \captionof{figure}{Schematic of modelling approach.}
+\end{Figure}
 
 %%% Local Variables:
 %%% mode: latex
