Add fig for 2d grid model

--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -2,10 +2,17 @@
 \section{Approach}
 \label{sec:approach}
 
+
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{square_array}
   \captionof{figure}{Schematic of modelling approach.}
+\end{Figure}
+
+\begin{Figure}
+  \centering
+  \includegraphics[width=\linewidth]{square_array_grid}
+  \captionof{figure}{Schematic of a spatially-discretized two-dimensional model.}
 \end{Figure}
 
 %%% Local Variables:
