Add agar diagram

--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -6,7 +6,7 @@
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{square_array}
-  \captionof{figure}{Schematic of modelling approach.}
+  \captionof{figure}{Schematic of simple modelling approach.}
 \end{Figure}
 
 \begin{Figure}
@@ -14,6 +14,13 @@
   \includegraphics[width=\linewidth]{square_array_grid}
   \captionof{figure}{Schematic of a spatially-discretized two-dimensional model.}
 \end{Figure}
+
+\begin{Figure}
+  \centering
+  \includegraphics[width=\linewidth]{qfa_v_sga_vars}
+  \captionof{figure}{QFA and SGA agars.}
+\end{Figure}
+
 
 %%% Local Variables:
 %%% mode: latex
