--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -22,6 +22,14 @@
 \end{Figure}
 
 
+\begin{Figure}
+  \centering
+  \includegraphics[width=\linewidth]{height_dep_miniqfa_delta_z}
+  \captionof{figure}{Schematics of diffusion across agar height.}
+\end{Figure}
+% Could model movement of vertical or movement across it.
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "proposal"
