Edit project title

--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -1,10 +1,5 @@
 \documentclass[11pt]{article}
 
-%opening
-\title{A Network Model of...}
-\author{Daniel Boocock}
-
-
 % Load all necessary packages
 \RequirePackage{inputenc,crop,graphicx,amsmath,array,color,amssymb,flushend,stfloats,amsthm,chngpage,times,hyperref}
 \RequirePackage[LY1]{fontenc}
@@ -54,7 +49,7 @@
   \fontfamily{phv}\fontseries{b}\fontsize{9}{11}\selectfont
 }
 \fancyhf[HLE]{\rule[-3mm]{0pt}{3mm} \helv \textbf{D. Boocock}}
-\fancyhf[HRO]{\rule[-3mm]{0pt}{3mm} \helv \textbf{A Network Model of Colony Growth on Solid Agar}}
+\fancyhf[HRO]{\rule[-3mm]{0pt}{3mm} \helv \textbf{Modelling Competition and Signalling Between Microbial Cultures Growing on Solid Agar Surfaces}}
 \fancyhf[HRE, HLO]{}
 \chead[]{}
 \lfoot[\helv \thepage]{}
