--- a/docs/proposal.tex
+++ b/docs/proposal.tex
@@ -1,6 +1,10 @@
 % Including page style and bib style.
 \input{preamble}
 
+% Title info
+\title{Modelling Competition and Signalling Between Microbial Cultures Growing on Solid Agar Surfaces}
+\author{Daniel Boocock}
+
 \begin{document}
 % Title page.
 \maketitle
